# RoASt

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config.toml
src/: main.rs
src/classification/: classification_generator.rs  comparison_generator.rs  logic.rs  mod.rs
src/data/: algo1.json  algo2.json  algo3.json
src/methodology/: cache.rs  configuration.rs  globals.rs  goal_positions_viewer.rs  goal_target_result.rs  goals_viewer.rs  logic.rs  mod.rs  parallel_rules.rs  parallel_rules_viewer.rs  rules_viewer.rs  simulator.rs  switching_colors_validator.rs  view.rs
src/modules/: algorithm.rs  algorithm_manager.rs  algorithm_snapshot.rs  algorithm_stats.rs  algorithm_status.rs  blocked_config_summary.rs  cache_helpers.rs  color.rs  combination_mode.rs  config.rs  config_snapshot.rs  config_stats.rs  direction.rs  dist_algo_simulator.rs  draft_rules.rs  dual_position.rs  execution_logger.rs  execution_status.rs  exploration_history.rs  exploration_result.rs  final_rule.rs  folder_generator.rs  full_rule.rs  generation_mode.rs  grid.rs  grid_config.rs  grid_experiment.rs  grid_size_generator.rs  init_config.rs  mod.rs  movement_direction.rs  opacity_validator.rs  parallel_rules.rs  position.rs  progress_helper.rs  rule.rs  simulation_config.rs  simulator.rs  time_helper.rs  validation_config.rs  (+4 more)
src/modules/algorithm_experiments_modules/: algo_info_by_robot_colors.rs  algo_infos.rs  algorithm_experiments.rs  algorithm_metrics.rs  experiment_result.rs  (+2 more)
src/validation/: initial_config_generator.rs  initial_config_viewer.rs  logger.rs  logic.rs  mod.rs
(+11 files in other folders)
