[package]
name = "RoAst"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"  # Use the latest version
rayon = "1.10.0"
chrono = "0.4"
lazy_static = "1.4"
indicatif = "0.17"
itertools = "0.12"

fxhash = "0.2"

[profile.release]
debug = true


